Fixed some layout issues

--- a/css/impact.css
+++ b/css/impact.css
@@ -18,3 +18,7 @@
 	margin-left: 2px;
 	margin-right: 2px;
 }
+
+.breaker {
+	display: inline-block;
+}
